# TEFModLoader

./: .gitignore  .gitmodules  LICENSE  LuckyDamage.efmod  MyMod-Name.efmod  MyMod.efmod  README-en.md  README-ru.md  README.md  build.gradle.kts  cmake-build-tool.py  config.gradle  create_mod_zip.py  local.properties  settings.gradle.kts
android/core/src/main/cpp/: CMakeLists.txt
android/core/src/main/cpp/TEFLoader/src/: TEFLoader.cpp
android/core/src/main/cpp/TEFModLoader/: auxiliary.cpp
android/core/src/main/cpp/TEFModLoader/mod-example/: example1.cpp  example2.cpp
android/core/src/main/cpp/TEFModLoader/src/: TEFModLoader.cpp  api_manager.cpp  hook.cpp  hook_manager.cpp  initialize_almost_everything.cpp  item_manager.cpp  log.cpp  logger.cpp  manager.cpp  projectile_manager.cpp  recipe.cpp  save_player.cpp  set_factory.cpp  tefmodloader.cpp  texture_assets.cpp  utility.cpp
android/core/src/main/cpp/TEFModLoader/src/API/: utility.cpp
android/core/src/main/cpp/lib/BNM-Android-master/: CMakeLists.txt
android/core/src/main/cpp/lib/Dobby/: CMakeLists.txt
android/core/src/main/cpp/lib/EFModLoader/: CMakeLists.txt
android/core/src/main/cpp/lib/efmod/: CMakeLists.txt  README-en.md  README-ru.md  README.md
app/src/main/cpp/: CMakeLists.txt  EFMod.cpp  EFModLoader.cpp  native-lib.cpp  toolbox.cpp
app/src/main/cpp/Future/: loadAndInvokeFunctions.cpp  loadMod  loadMod.cpp  logo.cpp
app/src/main/cpp/SilkCasket/: .gitgnore  CMakeLists.txt  README-en.md  README-ru.md  README.md  SilkCasket.hpp
app/src/main/cpp/SilkCasket/example/: example-tool.cpp
app/src/main/cpp/SilkCasket/include/silkcasket/: analysis.hpp  encryption.hpp  log.hpp  temp_directory_path.hpp
app/src/main/cpp/SilkCasket/src/: analysis.cpp
app/src/main/cpp/SilkCasket/src/compress/: compress.cpp  lizard.cpp  lz4.cpp  lzma2-fast.cpp  lzw.cpp
app/src/main/cpp/SilkCasket/src/parser/: entry.cpp
app/src/main/cpp/SilkCasket/src/structure/: entry.cpp  header.cpp
app/src/main/cpp/SilkCasket/src/utils/: file.cpp
app/src/main/cpp/example/: example1.cpp
core/src/main/cpp/: CMakeLists.txt  auxiliary.cpp  core.cpp  redirect.cpp
core/src/main/cpp/BNM/: CMakeLists.txt
core/src/main/cpp/BNM/include/BNM/: Defaults.hpp
core/src/main/cpp/EFModLoader/: CMakeLists.txt
core/src/main/cpp/EFModLoader/DependencyLibrary/BNM/: CMakeLists.txt
core/src/main/cpp/EFModLoader/include/: getData.hpp  log.hpp
core/src/main/cpp/EFModLoader/include/API/: redirect.hpp  register.hpp
core/src/main/cpp/EFModLoader/include/EFMod/: EFMod.hpp  EFModLoaderAPI.hpp
core/src/main/cpp/EFModLoader/include/Hook/: RegisterHook.hpp
core/src/main/cpp/EFModLoader/include/LOG/: MainLOGS.hpp
core/src/main/cpp/EFModLoader/include/Loader/: Loadcpp.hpp
core/src/main/cpp/EFModLoader/includes/EFModLoader/: log.hpp
core/src/main/cpp/EFModLoader/src/: Android.cpp  LoadMain.cpp  getData.cpp  log.cpp
core/src/main/cpp/EFModLoader/src/API/: register.cpp
core/src/main/cpp/EFModLoader/src/EFMod/: ModApi.cpp
core/src/main/cpp/EFModLoader/src/Hook/: RegisterHook.cpp
core/src/main/cpp/EFModLoader/src/LOG/: MainLOGS.cpp
core/src/main/cpp/EFModLoader/src/Load/: Loader.cpp
core/src/main/cpp/EFModLoader/src/Loader/: Loadcpp.cpp
core/src/main/cpp/EFModLoader/src/Manager/: API.cpp  Extend.cpp
core/src/main/cpp/EFModLoader/src/api/: Register.cpp  RegisterAPI.cpp  RegisterApi.cpp
core/src/main/cpp/EFModLoader/src/loader/: LoadELFMods.cpp
core/src/main/cpp/Major/: Major.cpp
core/src/main/cpp/Major/EFModLoader/: EFModLoader.cpp  MainLoad.cpp  main  main.cpp
core/src/main/cpp/Major/EFModLoader/HOOK/: Hook.cpp
core/src/main/cpp/Major/EFModLoader/Loader/: DynamicLibrary.cpp  JvmBytecode.cpp
core/src/main/cpp/Major/EFModLoader/include/: IMod.h  IModLoaderAPI.h  JvmBytecode.hpp  LOG.h
core/src/main/cpp/Major/Future/: getElement.cpp  loadAndInvokeFunctions.cpp
core/src/main/cpp/Major/SilkMemory/: SilkMemory.cpp
core/src/main/cpp/Major/SilkMemory/MemoryManage/: MemoryManage.hpp
core/src/main/cpp/TEFModLoader/: API.hpp  Hook.hpp  TEFModLoader.cpp
core/src/main/cpp/TEFModLoader/src/: TEFModLoader.cpp
core/src/main/cpp/TEFModLoader/src/TEFModLoader/: Register.cpp
core/src/main/cpp/example/LuckyDamage/: main.cpp  main2.cpp
core/src/main/cpp/example_mod/: TEFModLoader.cpp  example_1.cpp  example_mod.cpp  igc.hpp
core/src/main/cpp/example_mod/ForgottenTreasure/: main.cpp
core/src/main/cpp/example_mod/LuckyDamage/: example_mod.cpp
cpp/SilkCasket/: CMakeLists.txt  build.py  main.cpp
cpp/SilkCasket/SilkCasket-main/: CMakeLists.txt  build.py
cpp/SilkCasket/SilkCasket-main/example/: example-tool.cpp
cpp/SilkCasket/SilkCasket-main/include/SilkCasket/: SilkCasket.hpp  analysis.hpp  analysis_men.hpp  build.hpp  compress.hpp  encryption.hpp  structure.hpp  utils.hpp
cpp/SilkCasket/SilkCasket-main/src/: SilkCasket.cpp  analysis.cpp  build.cpp  compress.cpp  encryption.cpp  structure.cpp  utils.cpp
load/src/main/cpp/: CMakeLists.txt  EFandroid.cpp  agreement.h  load.cpp
load/src/main/cpp/EFModLoader/DependencyLibrary/BNM/: .CMakeLists.txt.kate-swp
load/src/main/cpp/EFModLoader/include/EFModLoader/: Android.hpp  agreement.h  getData.hpp  log.hpp
load/src/main/cpp/EFModLoader/src/: agreement.cpp  log.cpp
load/src/main/cpp/EFModLoader/src/android/: Android.cpp  api.cpp
load/src/main/cpp/EFModLoader/src/api/: RegisterAPI.cpp
load/src/main/cpp/EFModLoader/src/loader/: LoadELFMods.cpp
load/src/main/cpp/TEFModLoader/include/TEFModLoader/: Register.hpp
load/src/main/cpp/TEFModLoader/src/: TEFModLoader.cpp
load/src/main/cpp/TEFModLoader/src/TEFModLoader/: Register.cpp
load/src/main/cpp/example_mod/LuckyDamage/: example_mod.cpp
load/src/main/cpp/example_mod/MyMod/: main.cpp
silkcasket/SilkCasket/: CMakeLists.txt  README-en.md  README-ru.md  README.md
silkcasket/SilkCasket/example/: test.cpp
silkcasket/SilkCasket/src/: analysis_men.cpp  build.cpp
terraria/src/main/cpp/: CMakeLists.txt  TerrariaPaid.cpp  native-lib.cpp  toolbox.cpp
terraria/src/main/cpp/Future/: loadAndInvokeFunctions.cpp
(+949 files in other folders)
